--- a/README
+++ b/README
@@ -1,13 +1,24 @@
-(1) TRAINING A TINY IMAGENET CLASSIFIER FROM SCRATCH
+Section (0): REQUIREMENTS FOR RUNNING OUR PROGRAM
+
+To run our program, you will need to have Python 3.6 and the
+ubiquitous "virtualenv" installed on your system. Besides
+that, our Makefile will handle all other requirements.
+
+We have provided an easy-to-use Makefile to help you run our
+program.
+
+------------------------------------------------------------
+
+Section (1): TRAINING A TINY IMAGENET CLASSIFIER FROM SCRATCH
 
 To train a new classifier, "cd" into our submission
 directory and execute the following commands:
 
 make prepare-venv
 source env/bin/activate
-python train.py & 
+python train.py &
 python evaluate.py &
-tensorboard --logdir=$(pwd)/logs
+tensorboard --logdir=logs
 
 Then, open TensorBoard in your browser to monitor the
 classifier's accuracy as it is being trained. You can
@@ -15,6 +26,19 @@ also monitor loss, mean-squared error, and other metrics.
 
 ------------------------------------------------------------
 
-(2) CONTINUE TRAINING OUR ALREADY-TRAINED CLASSIFIER
+Section (2): CONTINUE TRAINING OUR ALREADY-TRAINED CLASSIFIER
 
-As part of our submission, we included 
+As part of our submission, we included a way to test the
+accuracy of our already-trained classifier. Execute the
+following commands in a new terminal:
+
+make prepare-venv
+source env/bin/activate
+python train.py $(pwd)/trained-logs/ &
+python evaluate.py $(pwd)/trained-logs/ &
+tensorboard --logdir=trained-logs
+
+^^^ TODO TODO TODO TODO TODO ^^^
+
+Like (1), you can open TensorBoard to monitor the
+classifier's accuracy.
